# Case-Study-1

./: README.md  adapters.py  consts.py  dataset.py  globals.py  grad_app.py  gradio_app.py  inference.py  local_model.py  main.py  model.py  paper1.md  pyproject.toml  remote_model.py  requirements.txt  reward.py  thompson.py  train.py
.github/workflows/: large-files.yml  lint.yml  run-tests.yml  sync-hub.yml
future_work/: adapters.py  dataset.py  main.py  model.py  train.py
server/: datamodels.py  db.py  routes.py
tests/: test_models.py
utils/: consts.py
